fix: add `overflow-x: clip` in html, body

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -49,6 +49,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   color: var(--color-text);
   background-color: var(--color-footer);
+  overflow-x: clip;
   @include mobile {
     font-size: 16px;
   }
